--- a/my_style.css
+++ b/my_style.css
@@ -34,13 +34,21 @@
   }
 
 
+
+  #content {
+    min-height: calc(100vh - 10vh);
+  }
+
+
+
   /* Style the footer */
   footer {
-    font-size:0.75vw;
+    font-size: 0.75vw;
     clear: both;
     position: fixed; /* absolute; /* relative;*/
-    bottom: 0vw;
+    bottom: 0vh;
     width: 100%;
+    height: 1.5vh;
     background-color: #777;
     padding: 0.25vw;
     text-align: center;
